# hypr-network-manager

./: .gitignore  CHANGELOG.md  README.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  config.json  meson.build  setup.sh
.ci/docker/: arch.Dockerfile  fedora.Dockerfile  ubuntu.Dockerfile
.github/workflows/: build-container.yaml  build-containers.yaml  build-containers.yml  build.yml  ci.yml  linting.yml
docs/: Documentation.md
dotfiles/hypr-network-manager/: config.json
dotfiles/hypr-network-manager/themes/: base.css
dotfiles/hypr-network-manager/themes/modern/: tokens.css
dotfiles/hypr-network-manager/themes/nord/: tokens.css
dotfiles/waybar/: module.json
po/: POTFILES.in  es.po  hypr-network-manager.pot
scripts/: compile-dev.sh  compile-prod.sh  compile.sh  fix_lint.py  install.sh  run-dev.sh  uninstall.sh
scripts/lib/: dependencies.sh
themes/: base.css  default.css  dracula.css  modern.css  nord.css  transparent.css
themes/catppuccin/: base.css  overrides.css
themes/core/: core-components.css  structure.css
themes/default/: base.css  tokens.css
themes/modern/: base.css  overrides.css  tokens.css
themes/nord/: base.css  overrides.css  tokens-storm.css  tokens.css
vala/: meson.build
vala/resources/: hypr-network-manager.gresource.xml
vala/resources/styles/: core-components.css  structure.css
vala/src/: app.vala  config.vala.in  constants.vala  logging.vala  main.vala
vala/src/backend/: dbus_runner.vala  nm_client.vala  nm_client_utils.vala  nm_ethernet_client.vala  nm_status_formatter.vala  nm_vpn_client.vala  nm_wifi_client.vala  nm_wifi_settings_builder.vala
vala/src/backend/utils/: nm_ip_config_helper.vala  nm_wifi_utils.vala
vala/src/models/: config.vala  network_device.vala  network_ip_settings.vala  network_state_context.vala  network_update_requests.vala  vpn_connection.vala  wifi_network.vala  wifi_saved_profile.vala  wifi_security_mode.vala  wifi_signal_levels.vala  window_config_context.vala
vala/src/ui/: blank_window.vala  main_window.vala
vala/src/ui/controllers/: main_window_abstract_details_edit_controller.vala  main_window_ethernet_connection_controller.vala  main_window_ethernet_controller.vala  main_window_ethernet_details_edit_controller.vala  main_window_flight_mode_controller.vala  main_window_page_callbacks.vala  main_window_profile_adapter.vala  main_window_refresh_coordinator.vala  main_window_vpn_controller.vala  main_window_wifi_controller.vala  main_window_wifi_details_edit_controller.vala  main_window_wifi_hidden_network_controller.vala  main_window_wifi_password_ui_controller.vala  main_window_wifi_refresh_controller.vala  main_window_wifi_row_action_callbacks.vala  main_window_wifi_row_reconciler.vala  main_window_wifi_runtime_controller.vala  main_window_wifi_saved_profile_form_utils.vala  main_window_wifi_saved_profiles_controller.vala
vala/src/ui/controllers/ethernet/: main_window_ethernet_connection_controller.vala  main_window_ethernet_controller.vala  main_window_ethernet_details_edit_controller.vala  main_window_ethernet_refresh_controller.vala
vala/src/ui/controllers/profiles/: main_window_profile_adapter.vala  main_window_wifi_saved_profiles_controller.vala
vala/src/ui/controllers/vpn/: main_window_vpn_controller.vala
vala/src/ui/controllers/wifi/: main_window_wifi_connection_controller.vala  main_window_wifi_controller.vala  main_window_wifi_details_edit_controller.vala  main_window_wifi_hidden_network_controller.vala  main_window_wifi_password_ui_controller.vala  main_window_wifi_refresh_controller.vala  main_window_wifi_row_reconciler.vala  main_window_wifi_switch_controller.vala
vala/src/ui/interfaces/: main_window_ethernet_row_action_handler.vala  main_window_ip_edit_page.vala  main_window_network_details_page.vala  main_window_wifi_page_action_handler.vala  main_window_wifi_row_action_handler.vala  main_window_wifi_row_provider.vala  window_host.vala
vala/src/ui/pages/: main_window_ethernet_page_builder.vala  main_window_ethernet_pages_builder.vala  main_window_ethernet_row_builder.vala  main_window_profiles_pages_builder.vala  main_window_vpn_page_builder.vala  main_window_wifi_details_pages_builder.vala  main_window_wifi_page_builder.vala  main_window_wifi_row_builder.vala  main_window_wifi_saved_pages_builder.vala
vala/src/ui/pages/ethernet/: main_window_ethernet_details_page.vala  main_window_ethernet_edit_page.vala  main_window_ethernet_page_builder.vala  main_window_ethernet_row_builder.vala  main_window_ethernet_view_context.vala
vala/src/ui/pages/profiles/: main_window_profiles_details_page.vala  main_window_profiles_page.vala  main_window_wifi_saved_edit_page.vala
vala/src/ui/pages/vpn/: main_window_vpn_page_builder.vala
vala/src/ui/pages/wifi/: main_window_wifi_details_page.vala  main_window_wifi_edit_page.vala  main_window_wifi_page_builder.vala  main_window_wifi_row_builder.vala
vala/src/ui/utils/: main_window_async_executor.vala  main_window_css_class_resolver.vala  main_window_css_classes.vala  main_window_dismiss_handler.vala  main_window_helpers.vala  main_window_helpers_formatting.vala  main_window_icon_resources.vala  main_window_ip_details_row_builder.vala  main_window_ip_edit_form_builder.vala  main_window_ip_sensitivity_rules.vala  main_window_layer_shell_configurator.vala  main_window_password_prompt_manager.vala  main_window_ui_metrics.vala  main_window_wifi_edit_utils.vala  transient_surface_tracker.vala
vala/src/ui/views/: app_content_navigation_manager.vala  ethernet_section_view.vala  saved_profiles_view.vala  status_bar_view.vala  vpn_section_view.vala  wifi_section_view.vala
vala/src/ui/widgets/: main_window_tabs_menu.vala  tracked_drop_down.vala  tracked_popover.vala  tracked_widgets.vala
waybar/: style.css
